# game

./: .gitignore  CMakeLists.txt  README.md  game.c  install.sh
game_VS_pc/: main.c  makefile  myprogram  tictactoe.c  tictactoe.h  vsPC.c
include/: tictactoe.h
output/: d  game
src/: main.c  tictactoe.c
